# lore_engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  Makefile  README.md  plan.md  pyproject.toml
backend/: .env.example  Makefile  README.md
backend/src/lore_engine/: __main__.py
backend/src/lore_engine/api/: app.py
backend/src/lore_engine/api/routes/: factions.py
backend/src/lore_engine/core/: logging.py
backend/src/lore_engine/mcp_server/: __init__.py  server.py
backend/src/lore_engine/models/: __init__.py  responses.py
backend/src/lore_engine/services/: lore_generator.py
backend/tests/unit/: test_mcp_server.py
docs/: STYLE_GUIDE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: FactionCard.jsx  FactionList.jsx  GeneratorControls.jsx  QuestCard.jsx  QuestDisplay.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  LoadingSpinner.jsx  Select.jsx
frontend/src/services/: api.js
frontend/src/styles/: fantasy-theme.css
frontend/src/utils/: clipboard.js  export.js
src/lore_engine/: __main__.py
src/lore_engine/api/: __init__.py  app.py  dependencies.py
src/lore_engine/api/routes/: __init__.py  factions.py  quests.py
src/lore_engine/core/: __init__.py  config.py
src/lore_engine/mcp_client/: __init__.py  client.py
src/lore_engine/mcp_server/: server.py
src/lore_engine/models/: responses.py
src/lore_engine/services/: __init__.py  lore_generator.py
