[project]
name = "lore-engine"
version = "0.1.0"
description = "Worldbuilding lore generation API"
authors = [
    {name = "Cesar Capilla",email = "mrsequin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "langchain (>=1.0.4,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "openai (>=2.7.1,<3.0.0)",
    "mcp (>=1.21.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
exclude = [".git", "__pycache__", ".venv"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
pre-commit = "^4.3.0"

